add /users/{username} and some other cleanups;  docs/newopenapi.yaml is ground truth, but ugly
